Fixing bug 414291. Make window.open() ignore modal=yes for backwards compatibility. r+sr=bzbarsky@mit.edu and jonas@sicking.cc